manifests/deployment-loggerout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loggerout-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loggerout
  template:
    metadata:
      labels:
        app: loggerout
    spec:
      volumes:
        - name: shared-img
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: logwriter
          image: enayetee/logwriter
          volumeMounts:
            - name: shared-img
              mountPath: /usr/src/app/files
        - name: logreader
          image: enayetee/logreader
          volumeMounts:
            - name: shared-img
              mountPath: /usr/src/app/files
