manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: enayetee/pingpong
