manifests/service-loggerout.yaml
apiVersion: v1
kind: Service
metadata:
  name: loggerout-svc
spec:
  type: ClusterIP
  selector:
    app: loggerout
  ports:
    - protocol: TCP
      port: 1235
      targetPort: 8085
