manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8083
    - name: port1236
      protocol: TCP
      port: 1236
      targetPort: 8083
